# vyn-django-localized-fields

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: release.yml
localized_fields/: models.py  widgets.py
localized_fields/fields/: file_field.py
localized_fields/migrations/: 0001_initial.py
tests/: test_field.py
